# bevy-ball-game

./: Cargo.toml  README.md
src/: main.rs
src/game/: components.rs  mod.rs  systems.rs
src/game/building/: components.rs  mod.rs  systems.rs
src/game/collector/: components.rs  mod.rs  systems.rs
src/game/debri/: components.rs  init.rs  mod.rs  resources.rs  systems.rs
src/game/enemy/: components.rs  mod.rs  systems.rs
src/game/player/: mod.rs  systems.rs
src/game/projectile/: systems.rs
src/game/score/: mod.rs  systems.rs
src/game/ui/hud/: components.rs  mod.rs
src/game/ui/hud/systems/: layout.rs  updates.rs
src/game/ui/spawn_toolbar/: styles.rs
src/game/ui/spawn_toolbar/systems/: interactions.rs  layout.rs
src/quadtree/: mod.rs  node.rs  tree.rs
