[package]
name = "bevy-ball-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
rand = "0.8"
instant = "0.1.12"
rayon = "1.7.0"
bevy_pancam = "0.10.0"
